Fix orders list text wrapping & Fix release dialog not refresh after close

--- a/src/styles/_global_styles.scss
+++ b/src/styles/_global_styles.scss
@@ -927,3 +927,9 @@ mat-card-title {
 .custom-mat-icon {    
     color: map-get($custom-colors, primary);
 }
+
+td , th {
+    white-space: normal;
+    word-wrap: break-word;
+    max-width: 150px;
+}
